# src/app/delivery/rest/register-user.dto.ts
@@ -1,0 +1,3 @@
+import { RegisterUser as genRegisterUser } from 'src/app/delivery/rest/generated/model/registerUser'
+
+export type RegisterUserDto = genRegisterUser;
